--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,20 @@
 [web]
 172.31.83.213
+
+[backend]
+172.31.83.213
+172.31.83.213
+172.31.83.213
+172.31.83.213
+172.31.83.213
+
+[frontend]
+172.31.83.213
+172.31.83.213
+172.31.83.213
+172.31.83.213
+172.31.83.213
+
+[expense:children]  #group of groups
+backend
+frontend
