--- a/03-install-nginx.yaml
+++ b/03-install-nginx.yaml
@@ -3,8 +3,7 @@
   become: yes  # -b (become root user)
   tasks:
     - name: install nginx
-      ansible.builtin.package:  # this can make ansible heterogeneous---on any platform we can run
-        #ansible.builtin.dnf ----- homogeneous (only on redhat enterprise we can run this package)
+      ansible.builtin.package:  # this can make ansible heterogeneous---on any platform we can run#ansible.builtin.dnf ----- homogeneous (only on redhat enterprise we can run this package)
         name: install nginx
         state: present # present = install; absent = remove
     - name: start nginx
