--- a/04-practice.yaml
+++ b/04-practice.yaml
@@ -1,5 +1,18 @@
-- name: PING THE SERVER
+- name: connect the node
   hosts: web
   tasks:
   - name: ping the server
     ansible.builtin.ping:
+  - name: print hello world
+    ansible.builtin.debug:
+    - name: print
+      msg: "Hello World"
+  - name: install nginx
+    ansible.builtin.package:
+    - name: nginx
+      state: present
+  - name: start nginx
+    ansible.builtin.service:
+    - name: nginx
+      state: started
+      enabled: yes
