--- a/04-practice.yaml
+++ b/04-practice.yaml
@@ -8,10 +8,10 @@
       msg: "Hello World"
   - name: install nginx
     ansible.builtin.package:
-    - name: nginx
+      name: nginx
       state: present
   - name: start nginx
     ansible.builtin.service:
-    - name: nginx
+      name: nginx
       state: started
       enabled: yes
