--- a/04-practice.yaml
+++ b/04-practice.yaml
@@ -7,6 +7,7 @@
     ansible.builtin.debug:
       msg: "Hello World"
   - name: install nginx
+    become: yes
     ansible.builtin.package:
       name: nginx
       state: present
