--- a/05-vars.yaml
+++ b/05-vars.yaml
@@ -8,4 +8,4 @@
   tasks:
   - name: print variables
     ansible.builtin.debug:
-      msg: "I have joined "{{ COURSE }}" course, and it's duration is "{{ DURATION }}". Trainer is "{{ TRAINER }}""
+      msg: " I have joined {{ COURSE }} course, and it's duration is {{ DURATION }}. Trainer is {{ TRAINER }}"
