--- a/06-task-vars.yaml
+++ b/06-task-vars.yaml
@@ -8,7 +8,7 @@
   tasks:
   - name: print variables
     vars: 
-      COURSE: ANSIBLE
+      COURSE: ANSIBLE #task-level variables, accessible only with in the task. Task variables can override play level variables
     ansible.builtin.debug:
       msg: " I have joined {{ COURSE }} course, and it's duration is {{ DURATION }}. Trainer is {{ TRAINER }}"
   - name: print variables 
