--- a/07-vars-file.yaml
+++ b/07-vars-file.yaml
@@ -1,7 +1,7 @@
 - name: using variables file
   hosts: local
   connection: local
-  vars_file:  
+  vars_files:  
   - variables.yaml
   tasks: 
   - name: print variables file information
