--- a/07-vars-file.yaml
+++ b/07-vars-file.yaml
@@ -7,3 +7,8 @@
   - name: print variables file information
     ansible.builtin.debug:
       msg: "I have joined {{ COURSE }} course, it's duration is {{ DURATION }}. Trainer is {{ TRAINER }}."
+  - name: print variables
+    vars: 
+      COURSE: ANSIBLE #task-level variables, accessible only with in the task. Task variables can override play level variables
+    ansible.builtin.debug:
+      msg: " I have joined {{ COURSE }} course, and it's duration is {{ DURATION }}. Trainer is {{ TRAINER }}"
