--- a/07-vars-file.yaml
+++ b/07-vars-file.yaml
@@ -9,6 +9,6 @@
       msg: "I have joined {{ COURSE }} course, it's duration is {{ DURATION }}. Trainer is {{ TRAINER }}."
   - name: print variables
     vars: 
-      COURSE: ANSIBLE #task-level variables, accessible only with in the task. Task variables can override play level variables
+      COURSE: ANSIBLE 
     ansible.builtin.debug:
       msg: " I have joined {{ COURSE }} course, and it's duration is {{ DURATION }}. Trainer is {{ TRAINER }}"
