--- a/inventory.ini
+++ b/inventory.ini
@@ -23,6 +23,6 @@ frontend
 localhost
 
 [local:vars]
-COURSE: "Devops with AWS"
-DURATION: 120HRS
-TRAINER: SIVAREDDY
+COURSE="Devops with AWS"
+DURATION=120HRS
+TRAINER=SIVAREDDY
