--- a/inventory.ini
+++ b/inventory.ini
@@ -1,5 +1,5 @@
 [web]
-172.31.83.213 COURSE="Devops with AWS" DURATION="120HRS" TRAINER="SIVAREDDY"
+172.31.83.213 COURSE="Devops with AWS" DURATION="120HRS" TRAINER="SIVAREDDY" ansible_user=ec2-user ansible_password=DevOps321
 
 [backend]
 172.31.83.213
