--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,6 @@
 [web]
 172.31.83.213 COURSE="Devops with AWS" DURATION="120HRS" TRAINER="SIVAREDDY" ansible_user=ec2-user ansible_password=DevOps321
-localhost1 COURSE="Ansible" DURATION="10HRS" TRAINER="SIVAREDDY" ansible_user=ec2-user ansible_password=DevOps321
+localhost 
 
 [backend]
 172.31.83.213
@@ -23,7 +23,7 @@ frontend
 [local]
 localhost
 
-[local:vars]
-COURSE="Devops with AWS"
-DURATION="1HRS"
-TRAINER="SIVAREDDY"
+; [local:vars]
+; COURSE="Devops with AWS"
+; DURATION="1HRS"
+; TRAINER="SIVAREDDY"
