--- a/11-vars-args.yaml
+++ b/11-vars-args.yaml
@@ -1,5 +1,6 @@
 - name: print inventory variables
   hosts: local
+  connection: local
   tasks:
   - name: print variables
     ansible.builtin.debug:
