--- a/inventory.ini
+++ b/inventory.ini
@@ -23,7 +23,8 @@ frontend
 [local]
 localhost
 
-; [local:vars]
-; COURSE="Devops with AWS"
-; DURATION="1HRS"
-; TRAINER="SIVAREDDY"
+[local:vars]
+COURSE="Devops with AWS"
+DURATION="1HRS"
+TRAINER="SIVAREDDY"
+GREET="local-variables"
