--- a/12-vars-preference.yaml
+++ b/12-vars-preference.yaml
@@ -2,8 +2,10 @@
   hosts: local
   connection: local
   vars: #play-level variables
-    #GREET: "PLAY-LEVEL"
+    GREET: "PLAY-LEVEL"
   tasks:
   - name: print variables
+    vars: 
+      GREET: "TASK-LEVEL"
     ansible.builtin.debug:
       msg: "Hello from {{ GREET }}"
