--- a/12-vars-preference.yaml
+++ b/12-vars-preference.yaml
@@ -3,6 +3,12 @@
   connection: local
   vars: #play-level variables
     GREET: "PLAY-LEVEL"
+  vars_files:
+  - variables.yaml
+  vars_prompt:
+  - name: GREET
+    prompt: Please enter the value
+    private: false
   tasks:
   - name: print variables
     vars: 
