--- a/12-vars-preference.yaml
+++ b/12-vars-preference.yaml
@@ -3,8 +3,8 @@
   connection: local
   vars: #play-level variables
     GREET: "PLAY-LEVEL"
-  vars_files:
-  - variables.yaml
+  # vars_files:
+  # - variables.yaml
   vars_prompt:
   - name: GREET
     prompt: Please enter the value
