--- a/15-facts.yaml
+++ b/15-facts.yaml
@@ -1,7 +1,6 @@
-- name: print
+- name: print the facts
   hosts: web
-  become: yes
   tasks:
-  - name: print
+  - name: print the facts
     ansible.builtin.debug:
       msg: "{{ ansible_facts }}"
