--- a/20-filters.yaml
+++ b/20-filters.yaml
@@ -19,6 +19,7 @@
     ansible.builtin.debug:
       msg : "Course info {{ course | dict2items }}" #dictonary to items
   - name: Convert list to map
-    vars: {'key': 'name', 'value': 'ansible'}, {'key': 'duration', 'value': '10hrs'}, {'key': 'trainer', 'value': 'sivareddy'}
+    vars: 
+      course: "{'key': 'name', 'value': 'ansible'}, {'key': 'duration', 'value': '10hrs'}, {'key': 'trainer', 'value': 'sivareddy'}""
     ansible.builtin.debug:
       msg: "Course info {{ course | items2dict }}"     
