--- a/20-filters.yaml
+++ b/20-filters.yaml
@@ -25,4 +25,9 @@
       - {'key': 'duration', 'value': '10hrs'}
       - {'key': 'trainer', 'value': 'sivareddy'}
     ansible.builtin.debug:
-      msg: "Course info {{ course | items2dict }}"     
+      msg: "Course info {{ course | items2dict }}"
+  - name: change to lower case
+    vars: 
+      name: "Padma Priya Kadali"
+    ansible.builtin.debug:
+      msg: "Hello {{ name | lower }}"
