--- a/20-filters.yaml
+++ b/20-filters.yaml
@@ -28,6 +28,6 @@
       msg: "Course info {{ course | items2dict }}"
   - name: change to lower case
     vars: 
-      name: "Padma Priya Kadali"
+      name: "PADMA PRIYA KADALI"
     ansible.builtin.debug:
       msg: "Hello {{ name | lower }}"
