--- a/20-filters.yaml
+++ b/20-filters.yaml
@@ -36,3 +36,8 @@
       name: "padma priya kadali"
     ansible.builtin.debug:
       msg: "Hello {{ name | upper }}"
+  - name: print min to max
+    vars:
+      numbers: [1,3,5,76,234,6794]
+    ansible.builtin.debug:
+      msg: "Min number is {{ numbers | min }}, max number is {{ numbers | max }} "
