--- a/21-shell-command.yaml
+++ b/21-shell-command.yaml
@@ -3,5 +3,5 @@
   connection: local
   tasks:
   - name: execute ls command
-    ansible.builtin.command: ls -ltr
+    ansible.builtin.command: ls -ltr > /tmp/output.txt
 
