--- a/21-shell-command.yaml
+++ b/21-shell-command.yaml
@@ -5,4 +5,4 @@
   - name: execute ls command
     #ansible.builtin.command: ls -ltr > /tmp/output.txt
     ansible.builtin.shell: ls -ltr > /tmp/output.txt
-    ansible.builtin.debug: ls -ltr
+    ansible.builtin.command: ls -ltr
