--- a/21-shell-command.yaml
+++ b/21-shell-command.yaml
@@ -4,5 +4,5 @@
   tasks:
   - name: execute ls command
     #ansible.builtin.command: ls -ltr > /tmp/output.txt
-    ansible.builtin.shell: ls -ltr > /tmp/output.txt
+    #ansible.builtin.shell: ls -ltr > /tmp/output.txt
     ansible.builtin.command: ls -ltr
