--- a/21-shell-command.yaml
+++ b/21-shell-command.yaml
@@ -2,10 +2,11 @@
   hosts: local
   connection: local
   tasks:
-  - name: execute ls command
+  - name: execute shell module
     #ansible.builtin.command: ls -ltr > /tmp/output.txt ----will not work
     ansible.builtin.shell: ls -ltr > /tmp/output.txt
-    #ansible.builtin.command: ls -ltr --- will work
+  - name: execute command module
+    ansible.builtin.command: ls -ltr
     register: command_result
   - name: print the stored output
     ansible.builtin.debug:
