--- a/22-create-ec2-r53.yaml
+++ b/22-create-ec2-r53.yaml
@@ -33,9 +33,10 @@
   - name: print the stored output
     ansible.builtin.debug:
       msg: "{{ ec2_info }}"
-      
 
-
-
+  - name: print private addresses
+    ansible.builtin.debug:
+      msg: "{{item.instances[0].item}}: {{ item.instances[0].private_ip_address }}"
+    loop: "{{ ec2_info.results }}"
 
     
