--- a/22-create-ec2-r53.yaml
+++ b/22-create-ec2-r53.yaml
@@ -6,6 +6,7 @@
     sg_id: sg-0e3e5c6f4e37ec583
     ami_id: ami-09c813fb71547fc4f
     instance_type: t2.micro
+    zone: devopsclass.tech
     instances:
     - mysql
     - backend
@@ -37,4 +38,16 @@
   - name: print private addresses
     ansible.builtin.debug:
       msg: "{{ item.instances[0].private_ip_address }}"
-    loop: "{{ ec2_info.results }}"    
+    loop: "{{ ec2_info.results }}" 
+
+  - name: create private ip r53 records
+    amazon.aws.route53:
+      state: present
+      zone: "{{ zone }}"
+      record: "{{ item.item }}.{{ zone }}"
+      type: A
+      ttl: 1
+      value: "{{ item.instances[0].private_ip_address }}"
+      wait: true
+      overwrite: true # if any record is created earlier, overwrite that
+    loop: "{{ ec2_info.results }}" 
